fixed tic-tac-toe board being off-center and fixed computer AI

--- a/style.css
+++ b/style.css
@@ -16,14 +16,6 @@ h1, h3 {
     text-align: center;
 }
 
-#gameBoard {
-    display: grid;
-    text-align: center;
-    grid-template-columns: repeat(3, auto);
-    width: 200px;
-    margin: auto;
-    
-}
 
 #gameContainer {
     font-family: cursive;
